<resources>
    <string name="app_name">Pyramid Volume</string>
    <string name="pyramid_volume">Pyramid Volume</string>
    <string name="panjang">Panjang</string>
    <string name="lebar">Lebar</string>
    <string name="tinggi">Tinggi</string>
    <string name="calculate">Calculate</string>
    <string name="result">Result</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="copyright">Aplikasi Pyramid Volume adalah aplikasi yang menghitung volume dari pyramid dengan input panjang, lebar, dan tinggi</string>
    <string name="histori">Histori</string>
    <string name="belum_ada_data">Belum Ada Data</string>
    <string name="bagikan">Bagikan</string>
    <string name="input_invalid">Input Harus Diisi</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="hapus_histori">Hapus Histori?</string>
    <string name="konfirmasi_hapus">Hapus Semua Histori?</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>
    <string name="channel_name">Updater</string>
    <string name="channel_desc">Update data pyramid otomatis</string>
    <string name="notif_title">Ada Pyramid Baru!</string>
    <string name="notif_text">Coba cek deh biar gak penasaran</string>
    <string name="koneksi_error">Koneksi Error</string>
    <string name="pyramid">Pyramid</string>

</resources>